--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 cmd.exe
 .vscode/launch.json
-input/teste-3.pdf
-output_screenshots/
-output_images/
-input
-input_pdfs/
+output_screenshots/*
+output_images/*
+input_pdfs/*
+output_sheets/*
